2008-05-23  Tor Lillqvist  <tml@novell.com>

	* tests/samples/artwork.svg: Use "sans-serif" instead of
	"sanserif".

	* tests/samples/Picasso.svg: Use "sans-serif" instead of
	"sansserif".

2008-05-20  Tor Lillqvist  <tml@novell.com>

	* librsvg-zip.in: Package rsvg-convert.exe instead of the now
	nonexistent rsvg.exe.

2008-04-28  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* rsvg-text.c: Use #elif instead of nested #else #if.

2008-04-28  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* rsvg-text.c: Don't use #else if, but #else and an
	additional #if. Fixes the build with at least gcc 4.2.3.

2008-04-25  Hans Breuer  <hans@breuer.org>

	* rsvg-css.c : use HAVE_STRINGS_H
	* rsvg-path.c : #include "rsvg-private.h" to get common definitions
	* rsvg-text.c : make the text rendering capability depend on what 
	cairo provides. If there is no CAIRO_HAS_FT_FONT try to use 
	CAIRO_HAS_WIN32_FONT. Makes librsvg buildable on windows without 
	freetype dependency, bug #529889

2008-03-04  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-image.c: rsvg-convert crashed with SIGSEGV in _rsvg_acquire_xlink_href_resource()
	(#520261)
	
2008-02-24  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-text.c:
	* rsvg-styles.h:
	* rsvg-styles.c: Handle xml:space="prserve" (#353609)
	
2008-02-24  Dominic Lachowicz <domlachowicz@gmail.com>	

	* rsvg-path.c (rsvg_parse_path_do_cmd): If a moveto is followed by 
	multiple pairs of coordinates, the subsequent pairs are treated as 
	implicit lineto commands. (#482787)

	* rsvg-structure.c (rsvg_node_draw): Handle display:none (#486377)

	* test-display: Make window size larger (#445870)
	
2008-02-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* Fixes last bug @ below url. Text inside of text and tspan nodes
	now gets coalesced, so that we can pass it all to a single PangoLayout.
	This fixes some rendering bugs.
	
2008-02-20  Dominic Lachowicz <domlachowicz@gmail.com>

	From Behdad Esfahbod <behdad@behdad.org>
